# shotoku-zei

./: .gitignore  .npmrc  Cargo.toml  README.md  biome.json  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts
apps/web/src/routes/: index.tsx  wasm-demo.tsx
crates/shotoku-zei/: Cargo.toml
crates/shotoku-zei-wasm/: Cargo.toml
crates/shotoku-zei-wasm/src/: lib.rs
crates/shotoku-zei/src/: lib.rs
